Added: Zend_Feed dependency

--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,8 @@
         "psr-0": {
             "Kagency": "src/"
         }
+    },
+    "require":      {
+        "zendframework/zend-feed": "@stable"
     }
 }
