--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         }
     },
     "require":      {
-        "zendframework/zend-feed": "@stable"
+        "zendframework/zend-feed": "@stable",
+        "zendframework/zend-http": "@stable"
     }
 }
