Added: Hidden dependency on servicemanager
Zend_feed has a class extening from a servicemanager class. This causes
fatals, but is not declared as a dependency in composer…

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     },
     "require":      {
         "zendframework/zend-feed": "@stable",
-        "zendframework/zend-http": "@stable"
+        "zendframework/zend-http": "@stable",
+        "zendframework/zend-servicemanager": "@stable"
     }
 }
