--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ant"]
 	path = ant
-	url = git@github.com:Kagency/build-commons.git
+	url = https://github.com/Kagency/build-commons.git
